<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.favorite.movieFavorite.MovieFavoriteFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewMovieFavorite"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <TextView
        android:visibility="invisible"
        android:id="@+id/tvEmptyMovieFavorite"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:text="Empty Movie Favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</FrameLayout>