...
        app:titleTextColor="@android:color/white" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayoutFavorite"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/viewPagerFavorite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialToolbarFavorite"
        app:tabBackground="@color/purple_500"
        app:tabIndicatorColor="@color/purple_200"
        app:tabSelectedTextColor="@android:color/white"
...
